--- a/yogsite/templates/directory/macros.html
+++ b/yogsite/templates/directory/macros.html
@@ -24,7 +24,7 @@
 
 					<td>
 						{% if note.timestamp %}
-							<time datetime="{{ note.timestamp }}">{{ render_datetime_as_delta(note.timestamp) }}</time>
+							{{ render_datetime_as_delta(note.timestamp) }}
 						{% else %}
 							None
 						{% endif %}
