add ban button on admin dropdown

--- a/yogsite/templates/layout.html
+++ b/yogsite/templates/layout.html
@@ -57,6 +57,7 @@
 							<a class="navbar-link">Admin</a>
 
 							<div class="navbar-dropdown">
+								<a class="navbar-item" href="/bans/add">Add Ban</a>
 								<a class="navbar-item" href="/admin/action_log">Action Log</a>
 								<a class="navbar-item" href="/admin/loa">LOAs</a>
 								<a class="navbar-item" href="/admin/donors">Donors</a>
