--- a/yogsite/templates/layout.html
+++ b/yogsite/templates/layout.html
@@ -11,7 +11,7 @@
 
 		<link rel="stylesheet" href="/static/css/main.css" />
 
-		<link rel="stylesheet" href="/static/css/bulma.min.css" />
+		<link rel="stylesheet" href="/static/css/qwerty-bulma.min.css" />
 		<link rel="stylesheet" href="/static/css/bulma-slider.min.css" />
 		
 		<script src="/static/js/jquery.min.js"></script>
