--- a/yogsite/templates/layout.html
+++ b/yogsite/templates/layout.html
@@ -4,6 +4,8 @@
 
 		<title>Yogstation - {% block title %}{% endblock %}</title>
 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="{{ request.url }}" />
 
