--- a/yogsite/templates/home.html
+++ b/yogsite/templates/home.html
@@ -3,6 +3,8 @@
 {% block title %}Home{% endblock %}
 
 {% block head %}
+	<link rel="stylesheet" href="/static/css/home.css" />
+
 	<script src="/static/js/home.js"></script>
 {% endblock %}
 
@@ -22,7 +24,7 @@
 						<progress class="progress is-small is-primary" max="100"></progress>
 				</div>
 
-				<div v-cloak v-for="server in server_stats" class="card">
+				<div v-cloak v-for="server in server_stats" class="card server-stats-card">
 					<div class="card-content">
 						<div class="media">
 							<div class="media-content">						
