--- a/yogsite/templates/util/macros.html
+++ b/yogsite/templates/util/macros.html
@@ -86,3 +86,11 @@
 {% macro render_datetime_as_delta(dt) %}
 	<time datetime="{{ dt }}" title="{{ dt }}">{{ util.readable_time_delta(dt) }}</time>
 {% endmacro %}
+
+{% macro abbreviate(content, maxlength) %}
+	{% if content | length > maxlength %}
+		<abbr title="{{ content }}">{{ content | truncate(maxlength) }}</abbr>
+	{% else %}
+		{{ content }}
+	{% endif %}
+{% endmacro %}
