--- a/yogsite/templates/bans/macros.html
+++ b/yogsite/templates/bans/macros.html
@@ -26,7 +26,11 @@
 						<td>{{ ckey_link(ban.ckey) }}</td>
 					{% endif %}
 
-					<td>{{ ban.role }}</td>
+					<td>
+						{{ ", ".join(ban.roles.split(",")) }}
+						{# This is because the delimiter is ',' and I can't change it anywhere
+						else so I guess I'll just have to change it here in the view #}
+					</td>
 
 					<td>{{ ban.reason }}</td>
 
