--- a/yogsite/templates/bans/edit.html
+++ b/yogsite/templates/bans/edit.html
@@ -118,7 +118,7 @@
 						<div class="columns">
 							<div class="column is-half">
 								<div class="control">
-									<a class="button is-danger is-fullwidth is-pulled-left">{% if ban %}Discard Edits{% else %}Discard Ban{% endif %}</a>
+									<a href="javascript:history.back()" class="button is-danger is-fullwidth is-pulled-left">{% if ban %}Discard Edits{% else %}Discard Ban{% endif %}</a>
 								</div>
 							</div>
 
