--- a/yogsite/templates/directory/player.html
+++ b/yogsite/templates/directory/player.html
@@ -62,7 +62,7 @@
 				<div class="column is-one-fourth">
 					<div class="box has-text-centered">
 						<p class="title is-4">Living</p>
-						<p class="subtitle is-4">{{ (player.get_role_time("Living") / 60) | round | int }} hours</p> {# temporary until I get deaths table TODO: fix #}
+						<p class="subtitle is-4">{{ (player.get_role_time("Living") / 60) | round | int }} hours</p>
 					</div>
 				</div>
 				<div class="column is-one-fourth">
