--- a/yogsite/templates/rounds/log_viewer/log_viewer.html
+++ b/yogsite/templates/rounds/log_viewer/log_viewer.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Round - {{ round.id }} - Logs{% endblock %}
+{% block title %}Rounds - {{ round.id }} - Logs{% endblock %}
 
 {% block head %}
 	<script src="/static/js/log_viewer.js"></script>
