--- a/yogsite/templates/util/macros.html
+++ b/yogsite/templates/util/macros.html
@@ -48,13 +48,9 @@
 		<div class="field">
 			<div class="control has-icons-left">
 				<input name="query" class="input" type="text"
-
-				placeholder="{{ placeholder_text }}"
-
-				{% if default_value %}
-					value="{{ default_value }}"
-				{% endif %}
-			/>
+					placeholder="{{ placeholder_text }}"
+					{% if default_value %}value="{{ default_value }}"{% endif %}
+				/>
 				<span class="icon is-small is-left">
 					<i class="fas fa-search"></i>
 				</span>
@@ -65,7 +61,7 @@
 
 {% macro form_errors(form) %}
 	{% if form.errors %}
-		<ul class=errors>
+		<ul class="errors">
 			{% for field, errors in form.errors.items() %}
 				{% for error in errors %}
 					<div class="message is-danger mb-3">
